# Contracts_projects_app

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  db.db  db_diagram.xml  db_schema.sql  interfaces.py  main.py  pyproject.toml
business_logic/: __init__.py  contract.py  errors.py  project.py
data_acces/DAO/: __init__.py  base.py  contract.py  project.py
data_acces/DTO/: __init__.py  contract.py  project.py
presentation_layer/: config.py  db_connector.py  db_provider.py  errors.py  validators.py
